--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beranda</title>
-    <favicon href="😀" type="image/x-icon">
+    <favicon href="😀" type="image/">
 </head>
 <body>
     
