--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Ahmad Sumbul Sahroni</h1>
     <p>assalamualaikum  hi</p>
-    skibidi bop yes yes yes
     <p>hello world</p>
+    <img src="" alt="">
     
 </body>
 </html>
