--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>assalamualaikum  hi</p>
     <p>hello world</p>
     <p>charon bobo</p>
-    <img src="" alt="">
+    <img src="assets/images/yesking.jpeg" alt="" width="200" height="200 ">
     <h1>mwehehehe</h1>
     <h1>dwdwdwdwddojqdoqjqoqwfwfwfwfw</h1>
     <p>assalamualaikum salam sejahtera bagi kita semua om swastiastu</p>
