--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>assalamualaikum  hi</p>
     <p>hello world</p>
     <img src="" alt="">
-    <h1>mwehehehe</h1>
+    <h>h1>Halo Dunia</h1>
     
 </body>
 </html>
