--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="" alt="">
     <h1>mwehehehe</h1>
     <h1>dwdwdwdwddojqdoqjqoqwfwfwfwfw</h1>
+    <p>assalamualaikum salam sejahtera bagi kita semua om swastiastu</p>
     
 </body>
 </html>
