--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beranda</title>
     <favicon href="😀" type="image/">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Ahmad Sumbul Sahroni</h1>
